k8s/app/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          args: ["tunnel", "run"]
          volumeMounts:
            - name: tunnel-credentials
              mountPath: /etc/cloudflared/creds
              readOnly: true
            - name: tunnel-config
              mountPath: /etc/cloudflared
              readOnly: true
      volumes:
        - name: tunnel-credentials
          secret:
            secretName: cloudflared-credentials
        - name: tunnel-config
          configMap:
            name: cloudflared-config
