k8s/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: run-goals-frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: run-goals-frontend # matches deployment's labels
  ports:
    - port: 80 # Service port
      targetPort: 80 # Container port from your frontend deployment
      nodePort: 30080 # NodePort
