k8s/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: run-goals-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: run-goals-frontend
  template:
    metadata:
      labels:
        app: run-goals-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/craeyefish/run-goals-frontend:frontend-v1.2.3 # {"$imagepolicy": "flux-system:run-goals-frontend"}
          resources:
            requests:
              memory: '128Mi'
              cpu: '50m'
            limits:
              memory: '256Mi'
              cpu: '250m'
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: run-goals-frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: run-goals-frontend # matches deployment's labels
  ports:
    - port: 80 # Service port
      targetPort: 80 # Container port from your frontend deployment
      nodePort: 30080 # NodePort
